build: Create a static page with an image

--- a/templates/draw/index.html.twig
+++ b/templates/draw/index.html.twig
@@ -9,12 +9,13 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>{{ controller_name }} ! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/salman/Documents/draw-website/src/Controller/DrawController.php'|file_link(0) }}">src/Controller/DrawController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/salman/Documents/draw-website/templates/draw/index.html.twig'|file_link(0) }}">templates/draw/index.html.twig</a></code></li>
-    </ul>
+    First Draw:
+
+        <img src="/images/Sans_titre_86_1.jpg" alt="">
+
+
+
 </div>
 {% endblock %}
