--- a/templates/draw/show.html.twig
+++ b/templates/draw/show.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    coucou
 
-    {% for draw  in draws  %}
-        <img src={{ asset("./public/uploads/draws/" ~ draw.post) }}/>
+    {% for draw  in draws %}
+        <h1>
+            {{ dump(draw.post) }}
+            <img src="{{ asset('uploads/draws/' ~ draw.post) }}"/>
+        </h1>
     {% endfor %}
 
 {% endblock %}
