build: Can publish your draws and display them

--- a/templates/draw/index.html.twig
+++ b/templates/draw/index.html.twig
@@ -10,12 +10,6 @@
 
 <div class="example-wrapper">
     <h1>{{ controller_name }} ! ✅</h1>
-
-    First Draw:
-
-        <img src="/images/Sans_titre_86_1.jpg" alt="">
-
-
-
+    {{ form(draw_form) }}
 </div>
 {% endblock %}
