--- a/templates/draw/show.html.twig
+++ b/templates/draw/show.html.twig
@@ -3,7 +3,11 @@
 {% block body %}
 
     {% for draw  in draws %}
-        <img src="{{ asset( 'uploads/draws/' ~ draw.post) }}" height="150"/>
+        <div>
+        <img src="{{ asset( 'uploads/draws/' ~ draw.post) }}" height="150"/><br>
+        {{ draw.name }}<br>
+        {{ draw.description }}
+        </div>
     {% endfor %}
 
 {% endblock %}
